# mcdev

./: .gitignore  README.md  acinclude.m4  configure.ac  index.html  panel-plugin-k8s-plan.md
.github/workflows/: ci-alpine.yml  ci-fedora.yml  ci-freebsd.yml  ci-macos.yml  ci-solaris.yml  ci-ubuntu.yml  command-rebase.yml  merge-checks.yml  pr-summary.yml  transifex.yml  update-skins.yml  update-sources.yml
doc/: PLUGINS  README
doc/hlp/: xnc.hlp
doc/man/: mc.1.in  mcedit.1.in
lib/: Makefile.am  editor-plugin.h  keybind.c  keybind.h  panel-cache.h  panel-plugin-loader.c  panel-plugin.c  panel-plugin.h  plugin-prefs.c  plugin-prefs.h  serialize.c  skin.h  terminal.c  util.c  util.h  widget.h
lib/skin/: colors.c  hc-skins.c
lib/strutil/: replace.c
lib/tty/: key.c  key.h
lib/vfs/: path.c
lib/widget/: Makefile.am  dialog.c  dialog.h  group.c  history.c  hline.c  hline.h  input.c  label.c  label.h  quick.c  quick.h  table.c  table.h  wtools.c
m4.include/: mc-mcterm.m4  mc-vfs.m4
maint/: release_notes.sh
misc/: Makefile.am  ctags.keymap  mc.default.keymap  mc.emacs.keymap  mc.ext.ini.in  mc.vim.keymap
misc/ext.d/: Makefile.am  image.sh  markdown.sh  markdown_common.awk  markdown_render.awk  markdown_table.awk  misc.sh.in  text.sh.in
misc/skins/: dark.ini  darkfar.ini  default.ini  double-lines.ini  featured-plus.ini  featured.ini  gotar.ini  gray-green-purple256.ini  gray-orange-blue256.ini  julia256.ini  julia256root.ini  mc46.ini  modarcon16-defbg-thin.ini  modarcon16-defbg.ini  modarcon16-thin.ini  modarcon16.ini  modarcon16root-defbg-thin.ini  modarcon16root-defbg.ini  modarcon16root-thin.ini  modarcon16root.ini  modarin256-defbg-thin.ini  modarin256-defbg.ini  modarin256-thin.ini  modarin256.ini  modarin256root-defbg-thin.ini  modarin256root-defbg.ini  modarin256root-thin.ini  modarin256root.ini  nicedark.ini  sand256.ini  seasons-autumn16M.ini  seasons-spring16M.ini  seasons-summer16M.ini  xoria256.ini  (+5 more)
src/: Makefile.am  args.c  args.h  history.h  key_learn.c  key_learn.h  key_sniffer.c  key_sniffer.h  keybind_dialog.c  keybind_dialog.h  keymap.c  keymap.h  manage_plugins.c  manage_plugins.h  setup.c  setup.h  textconf.c  usermenu.c  util.c
src/editor/: Makefile.am  edit-impl.h  edit.c  edit.h  editbuffer.c  editbuffer.h  editcmd.c  editcmd_private.h  editdraw.c  editmacros.c  editmacros.h  editmenu.c  editwidget.c  editwidget.h  fold.c  syntax.c
src/mctree/: Makefile.am  mctree-json-provider.c  mctree-model.c  mctree-model.h  mctree-providers.h  mctree-resolver.c  mctree-resolver.h  mctree-view.c  mctree-view.h  mctree-xml-provider.c  mctree-yaml-provider.c
src/panel-plugins/: Makefile.am
src/panel-plugins/arcmc/: Makefile.am  Makefile.in  archive-io.c  archive-io.h  arcmc-config.c  arcmc-config.h  arcmc-types.h  arcmc.c  dialog-pack.c  dialog-pack.h  dialog-settings.c  dialog-settings.h  progress.c
src/panel-plugins/docker/: Makefile.am  container-files.c  containers.c  dlog.sh  docker-cp-stream.c  docker-cp-stream.h  docker-internal.h  docker-logs.c  docker-logs.h  docker-tar.c  docker-tar.h  docker-ui.c  docker.c  docker_panel.hlp  images.c  networks.c  volumes.c
src/panel-plugins/ftp/: Makefile.am  ftp.c
src/panel-plugins/git/: Makefile.am  git.c  git_panel.hlp
src/panel-plugins/hello/: Makefile.am  hello.c
src/panel-plugins/k8s/: Makefile.am  k8s-cmd.c  k8s-internal.h  k8s-logs.c  k8s-logs.h  k8s-ui.c  k8s.c  k8s_panel.hlp  klog.sh  nodes.c  pods.c  services.c  workloads.c
src/panel-plugins/mctree/: Makefile.am  mctree.c
src/panel-plugins/mongo/: Makefile.am  mongo.c  mongo_bucket.c  mongo_columns.c  mongo_config.c  mongo_config.h  mongo_conn.c  mongo_conn.h  mongo_connections.c  mongo_docops.c  mongo_filter.c  mongo_filter.h  mongo_internal.h  mongo_nav.c  mongo_panel.hlp  mongo_render.c  mongo_render.h  mongo_session.c  mongo_settings.c  mongo_settings.h  mongo_ui.c  mongo_ui.h  mongo_wizard.c  mongo_wizard.h  mongo_wizard_json.c  mongo_wizard_parse.c  mongo_wizard_priv.h
src/panel-plugins/panelize/: Makefile.am  panelize.c  panelize_config.c  panelize_config.h  panelize_dlg.c  panelize_dlg.h  panelize_url.c  panelize_url.h
src/panel-plugins/s3/: Makefile.am  s3.c  s3_connect_status.c  s3_connection.c  s3_panel.hlp  s3_types.h
src/panel-plugins/samba/: Makefile.am  samba.c  samba_panel.hlp
src/panel-plugins/sftp/: Makefile.am  sftp.c
src/panel-plugins/shell-link/: Makefile.am  shell-link.c
src/panel-plugins/systemd/: Makefile.am  systemd.c
src/viewer/: Makefile.am  actions_cmd.c  ansi.c  ansi.h  ascii.c  datasource.c  display.c  filter.c  growbuf.c  internal.h  lib.c  mcviewer.c  mcviewer.h  move.c  nroff.c  search.c  source.c  structured.c  terminal_buffer.c  terminal_buffer.h  vterm.c  vterm.h
tests/: Makefile.am
tests/misc/ext.d/markdown/: Makefile.am  test_markdown.sh
tests/misc/ext.d/markdown/data/: headings.md  inline.md  latex.md  mixed.md  table.md
tests/src/: Makefile.am  keymap_reload.c  learn_modifiers.c  mcterm_key_encode.c  mcterm_osc7_parse.c  mctree_model.c  mctree_resolver.c  mctree_view.c  term_key_merge.c
tests/src/editor/: Makefile.am  ctags_fuzzy_tests.c  ctags_index_tests.c  ctags_parser_tests.c  edit_complete_word_cmd.c  edit_fold.c  edit_insert_column_of_text.c  edit_line_local_syntax.c  edit_plugin_etags.c  edit_undo_history.c  edit_undo_modified.c  nav_probe.c
tests/src/filemanager/: Makefile.am  panel_modes.c  panel_plugin_close.c  panel_scroll_marker_pos.c
tests/src/panel-plugins/: Makefile.am
tests/src/panel-plugins/arcmc/: Makefile.am  arcmc_utils.c
tests/src/panel-plugins/docker/: Makefile.am  docker_cp_stream_test.c  docker_domains_test.c  docker_paths_test.c  docker_tar_test.c
tests/src/panel-plugins/ftp/: ftp_utils.c
tests/src/panel-plugins/mongo/: Makefile.am  mongo_render_test.c
tests/src/panel-plugins/pp_common/: Makefile.am  pp_rename_with_ext.c
tests/src/panel-plugins/samba/: Makefile.am  samba_utils.c
tests/src/viewer/: Makefile.am  ansi_parser.c  mcview__filter.c  mcview__lcache.c  mcview__load_zip_magic.c  mcview__stream.c  vterm_terminal.c
(+55 files in other folders)
