
noinst_LTLIBRARIES = libmcviewer.la

libmcviewer_la_SOURCES = \
	actions_cmd.c \
	ansi.c ansi.h \
	ascii.c \
	coord_cache.c \
	datasource.c \
	dialogs.c \
	display.c \
	filter.c \
	growbuf.c \
	hex.c \
	internal.h \
	lib.c \
	mcviewer.c \
	mcviewer.h \
	move.c \
	nroff.c \
	search.c \
	source.c \
	structured.c \
	terminal_buffer.c terminal_buffer.h \
	vterm.c vterm.h

AM_CPPFLAGS = -I$(top_srcdir) $(GLIB_CFLAGS)
